add object field processing